[gd_scene load_steps=6 format=2]

[ext_resource path="res://Nodes/UI/Scoreboard.gd" type="Script" id=1]
[ext_resource path="res://Nodes/UI/Scoreline.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0823529, 0.0745098, 0.101961, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.184314, 0.211765, 0.243137, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.113725, 0.0941176, 0.113725, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color( 1, 0.980392, 0.980392, 0.6 )
shadow_size = 1

[sub_resource type="StyleBoxEmpty" id=3]

[node name="Scoreboard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.72018
margin_top = -1.0
margin_right = -2.72021
margin_bottom = -1.0
script = ExtResource( 1 )

[node name="MainPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -359.0
margin_top = -231.0
margin_right = 359.0
margin_bottom = 231.0
custom_styles/panel = SubResource( 1 )

[node name="Title" type="RichTextLabel" parent="MainPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -36.0
margin_top = 17.0
margin_right = 36.0
margin_bottom = 57.0
text = "Scoreboard"

[node name="VBoxContainer2" type="VBoxContainer" parent="MainPanel"]
margin_left = 85.5
margin_top = 67.5
margin_right = 632.5
margin_bottom = 394.5
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="MainPanel/VBoxContainer2"]
margin_right = 547.0

[node name="Scoreline" parent="MainPanel/VBoxContainer2" instance=ExtResource( 2 )]
editor/display_folded = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 20.0
margin_right = 547.0
margin_bottom = 35.0

[node name="Rank" parent="MainPanel/VBoxContainer2/Scoreline" index="0"]
margin_right = 133.0
margin_bottom = 15.0

[node name="Name" parent="MainPanel/VBoxContainer2/Scoreline" index="1"]
margin_left = 137.0
margin_right = 270.0
margin_bottom = 15.0
bbcode_text = "[center]Name"
text = "Name"

[node name="Score" parent="MainPanel/VBoxContainer2/Scoreline" index="2"]
margin_left = 274.0
margin_right = 407.0
margin_bottom = 15.0
bbcode_text = "[center]Score"
text = "Score"

[node name="Stage" parent="MainPanel/VBoxContainer2/Scoreline" index="3"]
margin_left = 411.0
margin_right = 547.0
margin_bottom = 15.0
bbcode_text = "[center]Stage"
text = "Stage"

[node name="Panel" type="Panel" parent="MainPanel/VBoxContainer2"]
margin_top = 55.0
margin_right = 547.0
margin_bottom = 327.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="MainPanel/VBoxContainer2/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -260.5
margin_top = -125.5
margin_right = 260.5
margin_bottom = 125.5

[node name="ScrollContainer" type="ScrollContainer" parent="MainPanel/VBoxContainer2/Panel/MarginContainer"]
margin_right = 521.0
margin_bottom = 251.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/bg = SubResource( 3 )
scroll_horizontal_enabled = false

[node name="ScoreContainer" type="VBoxContainer" parent="MainPanel/VBoxContainer2/Panel/MarginContainer/ScrollContainer"]
margin_right = 521.0
margin_bottom = 251.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="Button" type="Button" parent="MainPanel"]
margin_left = 40.1225
margin_top = 421.903
margin_right = 117.122
margin_bottom = 446.903
text = "Update"

[node name="Button2" type="Button" parent="MainPanel"]
margin_left = 132.0
margin_top = 426.0
margin_right = 221.0
margin_bottom = 446.0
text = "Add new score"

[node name="GetRequest" type="HTTPRequest" parent="."]

[node name="PostRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="MainPanel/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MainPanel/Button2" to="." method="_on_Button2_pressed"]
[connection signal="request_completed" from="GetRequest" to="." method="_on_GetRequest_request_completed"]

[editable path="MainPanel/VBoxContainer2/Scoreline"]
